--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ POSTGRES_SSL=false
 
 # SQLite Configuration (if using SQLite)
 SQLITE_DB_PATH=./database.sqlite
+
+# Microsoft Azure AD Configuration for SSO
+REACT_APP_MICROSOFT_CLIENT_ID=your-microsoft-client-id-here
+
+# Optional: If using a specific tenant (uncomment and replace)
+# REACT_APP_MICROSOFT_TENANT_ID=your-tenant-id-here
