--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "electron:preview": "npm run build && vite build --config vite.electron.config.ts && electron ."
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.15.0",
+    "@azure/msal-react": "^3.0.15",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -32,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/pg": "^8.15.4",
+    "@types/react-router-dom": "^5.3.3",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -43,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-resizable-panels": "^0.0.55",
+    "react-router-dom": "^7.7.0",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
