--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "dexie": "^4.0.11",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
+    "mammoth": "^1.9.1",
+    "pdfjs-dist": "^5.3.93",
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
